istio/istio-ingressgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.8.2","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports": [...]
  creationTimestamp: "2021-05-18T16:11:04Z"
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.8.2
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "118405"
  uid: c0d64481-105b-496d-a668-56298f707411
spec:
  clusterIP: 10.109.93.248
  clusterIPs:
  - 10.109.93.248
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 30696
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31958
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30973
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp-istiod
    nodePort: 32713
    port: 15012
    protocol: TCP
    targetPort: 15012
  - name: tls
    nodePort: 31335
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
