istio/prometheus-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kube-prometheus.home.virtualelephant.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - "kube-prometheus.home.virtualelephant.com"
  gateways:
  - prometheus-gateway
  http:
  - match:
    route:
    - destination:
        port:
          number: 9090
        host: prometheus.cilium-monitoring.svc.cluster.local
